--- a/desafioNodeMysql/docker-compose.yaml
+++ b/desafioNodeMysql/docker-compose.yaml
@@ -1,45 +1,49 @@
-version: '3'
+version: "3"
 
 services:
-
   app:
-    build:
-      context: node
+    build: ./node
     container_name: app
-    entrypoint: sh -c "npm install && node index.js"
     volumes:
       - ./node:/usr/src/app
     tty: true
+    ports:
+      - "3000:3000"
     depends_on:
       database:
-        condition: "service_healthy"
+        condition: service_healthy
+    restart: on-failure
 
   nginx:
-    image: nginx:1.15.0-alpine
+    image: nginx:latest
     container_name: nginx
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
       - "8080:80"
     depends_on:
-      - app
+      app:
+        condition: service_started
 
   database:
     image: mysql:8.0
-    command: --innodb-use-native-aio=0
     container_name: database
-    restart: always
+    restart: on-failure
     tty: true
     volumes:
       - mysql:/var/lib/mysql
+      - ./database:/docker-entrypoint-initdb.d
+    ports:
+      - "3306:3306"
     environment:
       - MYSQL_DATABASE=database
       - MYSQL_ROOT_PASSWORD=root
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p$$MYSQL_ROOT_PASSWORD"]
-      interval: 5s
-      timeout: 10s
-      retries: 3
+      test: ["CMD-SHELL", "mysqladmin ping -h localhost -uroot -proot"]
+      interval: 10s
+      timeout: 15s
+      retries: 5
+      start_period: 300s
 
 volumes:
   mysql:
